# url_shortener

./: .env.example  .gitignore  README.md  init_db.py  main.py  pyproject.toml  task_copilot.md  task_gemini.md  test_api.py  to-do.md
alembic/: env.py
alembic/versions/: 7337c95e161a_initial_migration.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  url_router.py  user_router.py
app/core/: config.py  database.py  security.py
app/db/: model_url.py  session.py
app/exceptions/: user_exceptions.py
app/models/: url.py  user.py
app/schemas/: url.py  user.py
app/service/: shorten.py  user.py
core/: config.py  security.py
db/: model_url.py  session.py
routes/: auth.py  deps.py  shortener.py  url_router.py  user.py  user_router.py
schemas/: url.py  user.py
service/: shorten.py  user.py
